# writing-llvm-pass

./: README.md
src/llvm-pass/: Makefile  cfg.cpp
src/llvm-pass/cfg-flattenPM/: CFGFlattenPass.cpp  CFGFlattenPass.h  CMakeLists.txt  CommonOptions.cpp  CommonOptions.h  FakeBBInsertionPass.cpp  FakeBBInsertionPass.h  JunkCodeInsertionPass.cpp  JunkCodeInsertionPass.h  PassPluginLibrary.cpp  main.cpp
src/llvm-pass/newPM/: CMakeLists.txt
